Fix crash in collection on startup

BUG:277277